2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Clean up the build tree properly.

	* data/Makefile.am: added $(dbus_DATA) to CLEANFILES

2008-01-10  Sven Herzberg  <herzi@gnome-de.org>

	Install a D-Bus service file for Maemo to get an idea about restarting
	Monkey-Bubble. Based on the Maemo port of Monkey-Bubble which was
	created by Jouni Roivas.

	* data/com.nokia.monkey_bubble.service.in: template for the service
	file
	* data/Makefile.am: added rules to distribute the template and build
	and install the service file

2008-01-10  Sven Herzberg  <herzi@gnome-de.org>

	Install monkey-bubble.desktop to the right path for Maemo. Based on
	the Maemo port of Monkey-Bubble which was created by Jouni Roivas.

	* configure.in: set GNOME and MAEMO conditionals for automake
	* Makefile.am: set the right installation path for the .desktop file
	for Maemo and for GNOME

2008-01-09  Sven Herzberg  <herzi@gnome-de.org>

	Fix compilation of a fresh checkout (closes #508137)

	* src/monkey/Makefile.am: use BUILT_SOURCES for built files

2008-01-04  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/main.c: use GOptionContext for argument parsing, this will
	add the gstreamer features to the help display

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in,
	* src/ui/Makefile.am: added checks to prepare the support of both a
	maemo-ui and a gnome-ui

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/keyboard-properties.c,
	* src/ui/main.c,
	* src/ui/ui-main.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: replaced <bonobo/bonobo-i18n.h> by
	<glib/gi18n.h>

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* help/C/monkey-bubble.xml: fixed a typo

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* src/monkey/Makefile.am,
	* src/net/Makefile.am: make sure the build supports srcdir != builddir
	(to make testing the upcoming maemo-build easier)

2008-01-03  Sven Herzberg <herzi@gnome-de.org>
