@@ -9,12 +9,21 @@ SUBDIRS = 	\
         help    \
 	$(NULL)
 
-applications_in_files = monkey-bubble.desktop.in
-applications_DATA = $(applications_in_files:.desktop.in=.desktop)
+applications_in_in_files = monkey-bubble.desktop.in.in
+applications_in_files = $(applications_in_in_files:.desktop.in.in=.desktop.in)
+applications_DATA = $(applications_in_in_files:.desktop.in.in=.desktop)
+
 if MAEMO
 applicationsdir = $(datadir)/applications/hildon
 else
 applicationsdir = $(datadir)/applications
+endif
+
+$(applications_in_files): $(applications_in_in_files) Makefile
+if MAEMO
+	sed 's#@BINDIR@#$(bindir)/#' $< > $@
+else
+	cp $< $@
 endif
 
 @INTLTOOL_DESKTOP_RULE@
@@ -26,11 +35,12 @@ intltool_in_files=\
 	$(NULL)
 
 EXTRA_DIST=\
-	$(applications_in_files)	\
+	$(applications_in_in_files) \
 	$(intltool_in_files) \
 	$(NULL)
 
 CLEANFILES=\
 	$(applications_DATA) \
+	$(applications_in_files) \
 	$(intltool_in_files:.in=) \
 	$(NULL)
