@@ -1,5 +1,15 @@
 2008-01-11  Sven Herzberg  <herzi@gnome-de.org>
 
+	Added another preprocessing step as Maemo requires the full path to be
+	given in the .desktop file.
+
+	* Makefile.am: added the rules to properly build the desktop file with
+	another preprocessing step
+	* monkey-bubble.desktop.in: renamed
+	* monkey-bubble.desktop.in.in: new name of the file
+
+2008-01-11  Sven Herzberg  <herzi@gnome-de.org>
+
 	Clean up the build tree properly.
 
 	* data/Makefile.am: added $(dbus_DATA) to CLEANFILES
